--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script type="module" src="/node_modules/flowbite/dist/flowbite.min.js"></script>
+  <script type="module" src="./node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
 </html>
